@@ -152,12 +152,14 @@
 // 2) if enabled, any a fault occurs immediately after charge is initiated,
 //    hard fault until power cycled. Otherwise, do the standard delay/retry sequence
 #define UL_COMPLIANT
+
+#ifdef UL_COMPLIANT
+#define ADVPWR
+#define GFI
 // if enabled, do GFI self test before closing relay
 #define UL_GFI_SELFTEST
-
-#ifdef UL_GFI_SELFTEST
 #define GFI_SELFTEST
-#endif //UL_GFI_SELFTEST
+#endif //UL_COMPLIANT
 
 #define TEMPERATURE_MONITORING  // Temperature monitoring support
 // not yet #define TEMPERATURE_MONITORING_NY
@@ -510,7 +512,7 @@
 #define GFI_PULSE_ON_US 8333 // 1/2 of roughly 60 Hz.
 #define GFI_PULSE_OFF_US 8334 // 1/2 of roughly 60 Hz.
 #endif
-
+#endif // GFI
 
 #ifdef GFI_TESTING
 #define GFI_TIMEOUT ((unsigned long)(15*1000))
@@ -520,7 +522,6 @@
 // number of times to retry tests before giving up. 255 = retry indefinitely
 #define GFI_RETRY_COUNT  6
 #endif // GFI_TESTING
-#endif // GFI
 
 // for RGBLCD
 #define RED 0x1
